Fix horizontal scroll and improved footer

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ html {
 body {
     text-align: center;
     margin: 0;
+    min-width: 100vw;
     min-height: 100vh;
 }
 
@@ -60,7 +61,7 @@ body {
 }
 
 .backgroundContainer {
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     height: 100%;
     background-image: url('assets/circuits-logo-bg.png');
@@ -71,6 +72,8 @@ body {
     padding: 2.4rem;
     position: relative;
     z-index: 0;
+    display: flex;
+    justify-content: center;
 }
 
 .backgroundContainer.noAnimation {
@@ -86,9 +89,11 @@ body {
     position: relative;
     z-index: 1;
     width: 60rem;
-    margin: 2.4rem auto;
+    height: fit-content;
+    margin: 0 2.4rem;
     border: 0.1rem solid var(--text-dark);
     background-color: var(--primary-light);
+    overflow-x: auto;
 }
 
 .toggleButton {
@@ -203,10 +208,37 @@ h4 {
     color: var(--accent-gold);
 }
 
+.footerSection {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+}
+
+#github {
+    width: 2.8rem;
+    height: 2.8rem;
+}
+
+.githubContainer:hover {
+    filter: brightness(150%);
+}
+
 #footer {
     color: var(--text-gray);
-    margin: 2rem;
+    margin: 2rem 0.8rem;
     font-size: 1.2rem;
+}
+
+.footerCircuits {
+    color: var(--primary-dark);
+    text-decoration: none;
+}
+
+.footerCircuits:hover {
+    color: var(--accent-gold);
+    text-decoration: underline;
 }
 
 #logo {
